<resources>
    <string name="app_name">Органайзер</string>
    <string name="action_settings">Settings</string>
    <string name="clock">Таймер</string>
    <string name="calculator">Калькулятор</string>
    <string name="remind">Напоминания</string>

    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>

    <string name="alarm_clock">Будильник</string>
    <string name="stopwatch">Секундомер</string>
    <string name="top">Открой меню :)</string>
    <string name="alarm_on">Поставить</string>
    <string name="alarm_off">Выключить</string>
    <string name="test">test</string>
    <string name="start_zero_time">0:00:00</string>
    <string name="start_btn">Старт</string>
    <string name="stop_btn">Стоп</string>
    <string name="reset_btn">Сброс</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="result">=</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="division">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multi">*</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="delete">Del</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="save">Готово</string>
    <string name="translate_text">Текст для перевода</string>
    <string name="to_translate">Перевести</string>
    <string name="translate">Переводчик</string>
    <string name="translate_first_lang">Английский</string>
    <string name="translate_second_lang">Русский</string>
    <string name="change_lang">Поменять языки местами</string>
    <string name="weather">Погода</string>

    <string name="change_city">Смена города</string>
    <string name="open_weather_maps_app_id">11111</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Информация не найдена.</string>

</resources>
