<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <RelativeLayout
        android:id="@+id/translate_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/translate_lang_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/translate_first_lang"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/translate_change_lang_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_swap_horizontal"
            android:contentDescription="@string/change_lang" />

        <TextView
            android:id="@+id/translate_lang_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/translate_second_lang"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/translate_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/translate_lang"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/translate_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/white"
            android:gravity="top|left"
            android:hint="@string/translate_text"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="10"
            android:minLines="5" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/translate_result_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/translate_card_view"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:gravity="top|left"
            android:inputType="none"
            android:lines="5"
            android:maxLines="10"
            android:minLines="5" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/translate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/to_translate"
        android:textStyle="bold" />

</RelativeLayout>